# tender_need_to_refactor

./: .dockerignore  Dockerfile  README.md  pyproject.toml
core/: __init__.py  appliction.py  config.py  main.py  models.py
core/database/: orm.py
core/v1/: bids.py  ping.py  tenders.py
posgresql/: create.sql
